--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -35,6 +35,10 @@
             margin-left: 8px;
         }
     }
+    .channel-1Shao0 .interactive-1vLZ_I {
+        margin-top: -1px;
+        margin-bottom: -1px;
+    }
 
     /* [ --COLORING-- ] */
     /* on hover */
