--- a/src/source.scss
+++ b/src/source.scss
@@ -1,3 +1,4 @@
-@use 'root';
-@use './indicators/base';
-@use './indicators/coloring';
+@use 'base/variables';
+
+@use 'components/indicators';
+@use 'components/coloring'
