--- a/clients/bd/modern-indicators.theme.css
+++ b/clients/bd/modern-indicators.theme.css
@@ -1,9 +1,10 @@
 /**
     * @name Modern Indicators
-    * @version 2.0.0
     * @description Updates Discord's indicators to feel more modern.
+    * @version 2.0.0
     * @author LuckFire
     *
+    * @invite vYdXbEzqDs
     * @website https://github.com/discord-extensions
     * @source https://github.com/discord-extensions/modern-indicators
 **/
