--- a/src/components/_channels.scss
+++ b/src/components/_channels.scss
@@ -75,7 +75,7 @@
                 &:hover {
                     background-color: var(--item-selected-background-hover);
                 }
-                svg {
+                .icon-Lupfh-, .closeIcon-1NwtbI {
                     color: var(--item-selected-icon);;
                 }
             }
