that did not fix it
This reverts commit 32fc74319896f811e3a6b024bcb43e5b0cc0df49.

--- a/src/components/_channels.scss
+++ b/src/components/_channels.scss
@@ -75,7 +75,7 @@
                 &:hover {
                     background-color: var(--item-selected-background-hover);
                 }
-                .icon-Lupfh-, .closeIcon-1NwtbI {
+                svg {
                     color: var(--item-selected-icon);;
                 }
             }
