--- a/src/source.scss
+++ b/src/source.scss
@@ -1,4 +1,4 @@
-@use './abstracts/variables';
+@use "./abstracts/variables";
 
-@use './components/channels';
-@use './components/discovery';
+@use "./components/channels";
+@use "./components/discovery";
